--- a/starwars/package.json
+++ b/starwars/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^10.2.1",
     "@testing-library/user-event": "^11.4.2",
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
